[package]
name = "docker-credential-docker-credential-manager"
version = "0.1.0"
edition = "2021"
description = "A docker credential helper that manages credentials"
license = "MIT"
authors = ["Simeon Borisov:"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.2.1"
